--- a/index.html
+++ b/index.html
@@ -29,15 +29,40 @@
 
     <!-- Above the Fold -->
     <section id="fold-above">
-      <h1 data-aos="fade-right">Meet, Gabriel Costa, <br/>
+      <h1 data-aos="fade-right" data-aos-duration="800">Meet, Gabriel Costa, <br/>
           Fullstack Developer & <br/>
           Forever in ♥ with tech. <div class="blink-bar"></div>
       </h1>
     </section>
 
     <!-- Intro-card -->
-    <div id="intro-card" style="min-height: 250px;">
-      <h2 data-aos="fade-top" style="text-align: center;">come back soon.</h2>
+    <div id="intro-card">
+
+      <!-- Picture -->
+      <div class="profile-image" data-aos="fade-right" data-aos-delay="100" data-aos-duration="700">
+        <img src="./build/assets/gabriel-picture.jpeg" />
+        <h4><i>(that's me)</i></h4>
+      </div>
+
+      <!-- About -->
+      <div class="content about" data-aos="fade-left" data-aos-delay="300" data-aos-duration="700">
+        <h2>📖 about.</h2>
+        <p>21 yo developer who loves to code and solve business problems through technology. Build great products and help other people's lives with them is what keeps me moving.</p>
+        <p>Started as a techie at 12 and start working with IT at 15, I have developed a strong desire in being part of every cycle of development, from idea to backlog to design to code to shipping, you name it. This taught myself as a <i>really</i> fullstack developer.</p>
+        <p>
+          <img src="./build/assets/ms1.png"/>
+          <img src="./build/assets/ms2.png"/>
+        </p>
+        <p>Keep scrolling to know what I've been working to 😄</p>
+      </div>
+
+      <div class="spacer" data-aos="fade-left" data-aos-delay="300" data-aos-duration="700"></div>
+
+      <!-- Work-exp -->
+      <div class="content padded professional" data-aos="fade-left" data-aos-delay="300" data-aos-duration="700">
+        <h2>👔 work experience.</h2>
+        <p>more soon.</p>
+      </div>
     </div>
 
   </div>
