--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,44 @@
       <!-- Work-exp -->
       <div class="content padded professional" data-aos="fade-left" data-aos-delay="300" data-aos-duration="700">
         <h2>👔 work experience.</h2>
-        <p>more soon.</p>
+        <br/>
+        <div class="work-item">
+          <div class="floating-ball"></div>
+          <h3>Fcamara - it consultant</h3>
+          <h4>Fullstack Developer</h4>
+          <h5>01/2017 - present</h5>
+          <br/>
+          <p>Working with:</p>
+          <p>- Innovation processes to our clients (artificial intelligence, chatbots, API's and problem solving)</p>
+          <p>- Mapping, Planning and Development of software architecture through Microservices and Multiple Clouds</p>
+          <p>- Fast and continuous delivery with continuous feedback from our clients</p>
+        </div>
+        <div class="work-item">
+          <div class="floating-ball"></div>
+          <h3>Dotz - loyalty program</h3>
+          <h4>Fullstack Developer - .NET</h4>
+          <h5>03/2016 - 01/2017</h5>
+          <br/>
+          <p>Working with:</p>
+          <p>- High performance and 24/7 availability systems</p>
+          <p>- Very fast and volatile development environment, working in Squads with Scrum</p>
+          <p>- Manage my own time and activities to reach short and challenging deadlines</p>
+        </div>
+        <div class="work-item">
+          <div class="floating-ball"></div>
+          <h3>Stefanini - insurance company</h3>
+          <h4>Fullstack Developer - .NET</h4>
+          <h5>10/2015 - 03/2016</h5>
+          <br/>
+          <p>Working with:</p>
+          <p>- User centrict product backlog definition and sprint development</p>
+          <p>- Managing work with fellow developers as a scrum master/product owner</p>
+          <p>- Product and process innovation through new software releases</p>
+        </div>
+        <div class="work-item">
+          <div class="floating-ball"></div>
+          <h3>... for the full work history (2017 -> 2011) you can check my LinkedIn 👇</h3>
+          <h4><a href="https://www.linkedin.com/in/gabrielrcosta/">https://www.linkedin.com/in/gabrielrcosta/</a></h4>
       </div>
     </div>
 
