Work in progress

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
         <li><a class="ion-social-github" target="_blank" href="https://github.com/Agezao"></a></li>
         <li><a class="ion-social-linkedin" target="_blank" href="https://www.linkedin.com/in/gabrielrcosta/"></a></li>
         <li><a class="ion-plus-round" target="_blank" href="https://stackoverflow.com/users/4100067/gabriel-age"></a></li>
+        <li><a class="ion-chatbubble" href="#contact"></a></li>
       </ul>
     </header>
 
@@ -39,13 +40,13 @@
     <div id="intro-card">
 
       <!-- Picture -->
-      <div class="profile-image" data-aos="fade-right" data-aos-delay="100" data-aos-duration="700">
+      <div class="content profile-image" data-aos="fade-down" data-aos-delay="100" data-aos-duration="700">
         <img src="./build/assets/gabriel-picture.jpeg" />
         <h4><i>(that's me)</i></h4>
       </div>
 
       <!-- About -->
-      <div class="content about" data-aos="fade-left" data-aos-delay="300" data-aos-duration="700">
+      <div class="content about" data-aos="fade-down" data-aos-delay="300" data-aos-duration="700">
         <h2>📖 about.</h2>
         <p>21 yo developer who loves to code and solve business problems through technology. Build great products and help other people's lives with them is what keeps me moving.</p>
         <p>Started as a techie at 12 and start working with IT at 15, I have developed a strong desire in being part of every cycle of development, from idea to backlog to design to code to shipping, you name it. This taught myself as a <i>really</i> fullstack developer.</p>
@@ -55,52 +56,84 @@
         </p>
         <p>Keep scrolling to know what I've been working to 😄</p>
       </div>
+    </div>
 
-      <div class="spacer" data-aos="fade-left" data-aos-delay="300" data-aos-duration="700"></div>
+    <div class="content" data-aos="fade-right" data-aos-delay="300" data-aos-duration="700"><div class="spacer"></div></div>
 
-      <!-- Work-exp -->
-      <div class="content padded professional" data-aos="fade-left" data-aos-delay="300" data-aos-duration="700">
-        <h2>👔 work experience.</h2>
-        <br/>
-        <div class="work-item">
-          <div class="floating-ball"></div>
-          <h3>Fcamara - it consultant</h3>
-          <h4>Fullstack Developer</h4>
-          <h5>01/2017 - present</h5>
-          <br/>
-          <p>Working with:</p>
-          <p>- Innovation processes to our clients (artificial intelligence, chatbots, API's and problem solving)</p>
-          <p>- Mapping, Planning and Development of software architecture through Microservices and Multiple Clouds</p>
-          <p>- Fast and continuous delivery with continuous feedback from our clients</p>
-        </div>
-        <div class="work-item">
-          <div class="floating-ball"></div>
-          <h3>Dotz - loyalty program</h3>
-          <h4>Fullstack Developer - .NET</h4>
-          <h5>03/2016 - 01/2017</h5>
-          <br/>
-          <p>Working with:</p>
-          <p>- High performance and 24/7 availability systems</p>
-          <p>- Very fast and volatile development environment, working in Squads with Scrum</p>
-          <p>- Manage my own time and activities to reach short and challenging deadlines</p>
-        </div>
-        <div class="work-item">
-          <div class="floating-ball"></div>
-          <h3>Stefanini - insurance company</h3>
-          <h4>Fullstack Developer - .NET</h4>
-          <h5>10/2015 - 03/2016</h5>
-          <br/>
-          <p>Working with:</p>
-          <p>- User centrict product backlog definition and sprint development</p>
-          <p>- Managing work with fellow developers as a scrum master/product owner</p>
-          <p>- Product and process innovation through new software releases</p>
-        </div>
-        <div class="work-item">
-          <div class="floating-ball"></div>
-          <h3>... for the full work history (2017 -> 2011) you can check my LinkedIn 👇</h3>
-          <h4><a href="https://www.linkedin.com/in/gabrielrcosta/">https://www.linkedin.com/in/gabrielrcosta/</a></h4>
+    <!-- Skills -->
+    <div class="content padded" data-aos="fade-down" data-aos-delay="300" data-aos-duration="700">
+      <h2>🖥 skills.</h2>
+      <div class="skill-niche">
+        <h4>front-end</h4>
+        <span>
+          Javascript
+        </span>
+      </div>
+      <div class="skill-niche">
+        <h4>back-end</h4>
+      </div>
+      <div class="skill-niche">
+        <h4>dev-ops</h4>
       </div>
     </div>
+
+    <div class="content" data-aos="fade-right" data-aos-delay="300" data-aos-duration="700"><div class="spacer"></div></div>
+
+    <!-- Work-exp -->
+    <div class="content padded professional" data-aos="fade-down" data-aos-delay="300" data-aos-duration="700">
+      <h2>👔 work experience.</h2>
+      <br/>
+      <div class="work-item">
+        <div class="floating-ball"></div>
+        <h3>Fcamara - it consultant</h3>
+        <h4>Fullstack Developer</h4>
+        <h5>01/2017 - present</h5>
+        <br/>
+        <p>Working with:</p>
+        <p>- Innovation processes to our clients (artificial intelligence, chatbots, API's and problem solving)</p>
+        <p>- Mapping, Planning and Development of software architecture through Microservices and Multiple Clouds</p>
+        <p>- Fast and continuous delivery with continuous feedback from our clients</p>
+      </div>
+      <div class="work-item">
+        <div class="floating-ball"></div>
+        <h3>Dotz - loyalty program</h3>
+        <h4>Fullstack Developer - .NET</h4>
+        <h5>03/2016 - 01/2017</h5>
+        <br/>
+        <p>Working with:</p>
+        <p>- High performance and 24/7 availability systems</p>
+        <p>- Very fast and volatile development environment, working in Squads with Scrum</p>
+        <p>- Manage my own time and activities to reach short and challenging deadlines</p>
+      </div>
+      <div class="work-item">
+        <div class="floating-ball"></div>
+        <h3>Stefanini - insurance company</h3>
+        <h4>Fullstack Developer - .NET</h4>
+        <h5>10/2015 - 03/2016</h5>
+        <br/>
+        <p>Working with:</p>
+        <p>- User centrict product backlog definition and sprint development</p>
+        <p>- Managing work with fellow developers as a scrum master/product owner</p>
+        <p>- Product and process innovation through new software releases</p>
+      </div>
+      <div class="work-item">
+        <div class="floating-ball"></div>
+        <h3>... for the full work history (2017 -> 2011) you can check my LinkedIn 👇</h3>
+        <h4><a href="https://www.linkedin.com/in/gabrielrcosta/">https://www.linkedin.com/in/gabrielrcosta/</a></h4>
+      </div>
+    </div>
+
+    <div class="content" data-aos="fade-right" data-aos-delay="300" data-aos-duration="700"><div class="spacer"></div></div>
+
+    <!-- Contact -->
+    <div class="content padded" data-aos="fade-down" data-aos-delay="300" data-aos-duration="700" id="contact">
+      <h2>📩 get in touch.</h2>
+      <h4>0800.grc@gmail.com</h4>
+    </div>
+
+    <footer>
+      <small>made with ♥ by Gabriel</small>
+    </footer>
 
   </div>
 
