--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <h4>front-end</h4>
         <span>
           Javascript
+          <div class="progress-holder"><div class="progress-bar" style="width: 45%;"></div></div>
         </span>
       </div>
       <div class="skill-niche">
