--- a/app/index.html
+++ b/app/index.html
@@ -21,10 +21,10 @@
     <!-- Header -->
     <header data-aos="fade-down" data-aos-delay="700" data-aos-duration="500">
       <ul>
-        <li><a class="ion-social-github" target="_blank" href="https://github.com/Agezao"></a></li>
-        <li><a class="ion-social-linkedin" target="_blank" href="https://www.linkedin.com/in/gabrielrcosta/"></a></li>
-        <li><a class="ion-plus-round" target="_blank" href="https://stackoverflow.com/users/4100067/gabriel-age"></a></li>
-        <li><a class="ion-chatbubble" href="#contact"></a></li>
+        <li><a class="fa fa-github" target="_blank" href="https://github.com/Agezao"></a></li>
+        <li><a class="fa fa-linkedin-square" target="_blank" href="https://www.linkedin.com/in/gabrielrcosta/"></a></li>
+        <li><a class="fa fa-stack-overflow" target="_blank" href="https://stackoverflow.com/users/4100067/gabriel-age"></a></li>
+        <li><a class="fa fa-envelope" href="#contact"></a></li>
       </ul>
     </header>
 
