--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
       </div>
       <div class="skill-niche">
         <h4>back-end</h4>
+        <span>
+          C#
+          <div class="progress-holder"><div class="progress-bar" style="width: 45%;"></div></div>
+        </span>
       </div>
       <div class="skill-niche">
         <h4>dev-ops</h4>
