--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
       <div class="skill-niche">
         <h4>front-end</h4>
         <span>
-          Javascript
-          <div class="progress-holder"><div class="progress-bar" style="width: 100%;"></div></div>
+          Javascript, ES6
         </span>
       </div>
       <div class="skill-niche">
