--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="skill-niche">
         <h4>back-end</h4>
         <span>
-          C#
+          C#, Node.js
         </span>
       </div>
       <div class="skill-niche">
