Some new perspectives

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 
     <!-- Above the Fold -->
     <section id="fold-above">
-      <h1 data-aos="fade-right" data-aos-duration="800">Meet, Gabriel Costa, <br/>
+      <h1 data-aos="fade-right" data-aos-duration="800">Meet, Gabriel Rodrigues, <br/>
           Fullstack Developer & <br/>
           Forever in ♥ with tech. <div class="blink-bar"></div>
       </h1>
@@ -42,89 +42,39 @@
       <!-- Picture -->
       <div class="content profile-image" data-aos="fade-down" data-aos-delay="100" data-aos-duration="700">
         <img src="./build/assets/gabriel-picture.jpeg" />
-        <h4><i>(that's me)</i></h4>
       </div>
 
       <!-- About -->
       <div class="content about" data-aos="fade-down" data-aos-delay="300" data-aos-duration="700">
         <h2>📖 about.</h2>
-        <p>21 yo developer who loves to code and solve business problems through technology. Build great products and help other people's lives with them is what keeps me moving.</p>
-        <p>Started as a techie at 12 and start working with IT at 15, I have developed a strong desire in being part of every cycle of development, from idea to backlog to design to code to shipping, you name it. This taught myself as a <i>really</i> fullstack developer.</p>
+        <p>22 yo developer who loves to code and solve problems through technology. Build great products and help other people lives with them is what keeps me moving.</p>
+        <p>Started as a techie at 12 and working with IT at 15, I've developed a strong desire in being part of every step of development, from idea to production. This made myself as a <i>trully</i> fullstack developer.</p>
         <p>
           <img src="./build/assets/ms1.png"/>
           <img src="./build/assets/ms2.png"/>
         </p>
-        <p>Keep scrolling to know what I've been working to 😄</p>
+        <p>Keep scrolling to know what I've been working 😄</p>
       </div>
     </div>
 
-    <div class="content" data-aos="fade-right" data-aos-delay="300" data-aos-duration="700"><div class="spacer"></div></div>
+    <!-- 99wikis -->
 
-    <!-- Skills -->
+    <!-- Colorbucket -->
+
+    <!-- React -->
+
+    <!-- SpookyCss -->
+
+    <!-- Disparei -->
+    
+
+    <div class="content" data-aos="fade-right" data-aos-delay="300" data-aos-duration="700"><div class="spacer"></div></div>
+    <!-- More Info -->
     <div class="content padded" data-aos="fade-down" data-aos-delay="300" data-aos-duration="700">
-      <h2>🖥 skills.</h2>
-      <div class="skill-niche">
-        <h4>front-end</h4>
-        <span>
-          Javascript
-          <div class="progress-holder"><div class="progress-bar" style="width: 45%;"></div></div>
-        </span>
-      </div>
-      <div class="skill-niche">
-        <h4>back-end</h4>
-      </div>
-      <div class="skill-niche">
-        <h4>dev-ops</h4>
-      </div>
+      <h2>🖥 skills. 👔 work experience. 🎓 education ...</h2>
+      <h4> >. To know more about me, check out my LinkedIn <a href="https://www.linkedin.com/in/gabrielrcosta/" target="_blank">here</a></h4>
+      <p>or</p>
     </div>
-
-    <div class="content" data-aos="fade-right" data-aos-delay="300" data-aos-duration="700"><div class="spacer"></div></div>
-
-    <!-- Work-exp -->
-    <div class="content padded professional" data-aos="fade-down" data-aos-delay="300" data-aos-duration="700">
-      <h2>👔 work experience.</h2>
-      <br/>
-      <div class="work-item">
-        <div class="floating-ball"></div>
-        <h3>Fcamara - it consultant</h3>
-        <h4>Fullstack Developer</h4>
-        <h5>01/2017 - present</h5>
-        <br/>
-        <p>Working with:</p>
-        <p>- Innovation processes to our clients (artificial intelligence, chatbots, API's and problem solving)</p>
-        <p>- Mapping, Planning and Development of software architecture through Microservices and Multiple Clouds</p>
-        <p>- Fast and continuous delivery with continuous feedback from our clients</p>
-      </div>
-      <div class="work-item">
-        <div class="floating-ball"></div>
-        <h3>Dotz - loyalty program</h3>
-        <h4>Fullstack Developer - .NET</h4>
-        <h5>03/2016 - 01/2017</h5>
-        <br/>
-        <p>Working with:</p>
-        <p>- High performance and 24/7 availability systems</p>
-        <p>- Very fast and volatile development environment, working in Squads with Scrum</p>
-        <p>- Manage my own time and activities to reach short and challenging deadlines</p>
-      </div>
-      <div class="work-item">
-        <div class="floating-ball"></div>
-        <h3>Stefanini - insurance company</h3>
-        <h4>Fullstack Developer - .NET</h4>
-        <h5>10/2015 - 03/2016</h5>
-        <br/>
-        <p>Working with:</p>
-        <p>- User centrict product backlog definition and sprint development</p>
-        <p>- Managing work with fellow developers as a scrum master/product owner</p>
-        <p>- Product and process innovation through new software releases</p>
-      </div>
-      <div class="work-item">
-        <div class="floating-ball"></div>
-        <h3>... for the full work history (2017 -> 2011) you can check my LinkedIn 👇</h3>
-        <h4><a href="https://www.linkedin.com/in/gabrielrcosta/">https://www.linkedin.com/in/gabrielrcosta/</a></h4>
-      </div>
-    </div>
-
-    <div class="content" data-aos="fade-right" data-aos-delay="300" data-aos-duration="700"><div class="spacer"></div></div>
 
     <!-- Contact -->
     <div class="content padded" data-aos="fade-down" data-aos-delay="300" data-aos-duration="700" id="contact">
