--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <header data-aos="fade-down" data-aos-delay="700" data-aos-duration="500">
       <ul>
         <li><a class="fa fa-github" target="_blank" href="https://github.com/Agezao"></a></li>
+        <li><a class="fa fa-medium" target="_blank" href="https://medium.com/@agegabriel/"></a></li>
         <li><a class="fa fa-linkedin-square" target="_blank" href="https://www.linkedin.com/in/gabrielrcosta/"></a></li>
         <li><a class="fa fa-stack-overflow" target="_blank" href="https://stackoverflow.com/users/4100067/gabriel-age"></a></li>
         <li><a class="fa fa-envelope" href="#contact"></a></li>
@@ -48,7 +49,7 @@
       <div class="content about" data-aos="fade-down" data-aos-delay="300" data-aos-duration="700">
         <h2>📖 about.</h2>
         <p>22 yo developer who loves to code and solve problems through technology. Build great products and help other people lives with them is what keeps me moving.</p>
-        <p>Started as a techie at 12 and working with IT at 15, I've developed a strong desire in being part of every step of development, from idea to production. This made myself as a <i>trully</i> fullstack developer.</p>
+        <p>Started as a techie at 12 and working with IT at 15, I've developed a strong desire in being part of every step of development, from idea to production. This made myself a <i>trully</i> fullstack developer.</p>
         <p>
           <img src="./build/assets/ms1.png"/>
           <img src="./build/assets/ms2.png"/>
@@ -57,16 +58,91 @@
       </div>
     </div>
 
-    <!-- 99wikis -->
+    <br />
+    <br />
+    <br />
 
-    <!-- Colorbucket -->
-
-    <!-- React -->
+    <div class="content padded" data-aos="fade-down" data-aos-delay="300" data-aos-duration="700">
+      <h2>💻 personal projects/labs</h2>
+    </div>
 
     <!-- SpookyCss -->
+    <div class="app-display spooky">
+      <div class="holder">
+        <div clas="logo"></div>
+        <h2>SpookyCss (CSS framework)</h2>
+        <a href="https://agezao.github.io/SpookyCss/" target="_blank">agezao.github.io/SpookyCss/</a>
+        <p>The Spooky "framework" contains just the basic for your project. With Spooky you can suit the basics needs of modern web for a simple project or use as a starting point to bootstrap your on UI framework.</a></p>
+        <h4>Build With</h4>
+        <p>Build with SASS, build process and scripts with Gulp.</p>
+      </div>
+    </div>
+
+    <!-- Colorbucket -->
+    <div class="app-display colorbucket">
+      <div class="holder">
+        <div clas="logo"></div>
+        <h2>Colorbucket</h2>
+        <a href="https://colorbucket.co/about/" target="_blank">colorbucket.co</a>
+        <p>Save the colors that you ♥ so you'll never lose that nice color again. We are just like <a href="https://getpocket.com/" target="_blank">pocket</a>, but for colors. This is an Open Source project, so feel free to check up <a href="https://github.com/ColorBucket" target="_blank">project's github</a> to know more!</p>
+        <h4>Build With</h4>
+        <p>Build as a React PWA, Chrome Extention and a Node + Express + MongoDb API. Continous Delivery with Jenkins. If you want to know more about the code, check <a href="https://github.com/ColorBucket" target="_blank">project's github</a></p>
+      </div>
+    </div>
+
+    <!-- React -->
+    <div class="app-display react">
+      <div class="holder">
+        <div clas="logo"></div>
+        <h2>React (Mobile game)</h2>
+        <a href="https://react.moonhorn.co" target="_blank">react.moonhorn.co</a>
+        <p>React is a free-to-play indie mobile game. You can download the game and know more about it <a href="https://react.moonhorn.co">here</a></p>
+        <h4>Build With</h4>
+        <p>Build with pure JS and Apache Cordova. API made with Node.js + Express + MondoDb. Data Mining in R.</p>
+      </div>
+    </div>
+
+    <!-- Confetti.js -->
+    <div class="app-display confetti">
+      <div class="holder">
+        <div clas="logo"></div>
+        <h2>confetti.js</h2>
+        <a href="https://agezao.github.io/confetti-js/" target="_blank">agezao.github.io/confetti-js</a>
+        <p>Javascript plugin to generate beautiful confetti at your web-site or design.</p>
+        <h4>Build With</h4>
+        <p>Pure JS. Check project's github <a href="https://github.com/Agezao/confetti-js" target="_blank">here</a></p>
+      </div>
+    </div>
+
+    <!-- 99wikis -->
+    <div class="app-display wikis">
+      <div class="holder">
+        <div clas="logo"></div>
+        <h2>99wikis</h2>
+        <a href="https://99wikis.com" target="_blank">99wikis.com</a>
+        <p>A simple and fast Progressive Web App for software documentation and knowledge base. A platform that helps your team to centralize knowledge, work together and always be on the same page.</p>
+        <h4>Build With</h4>
+        <p>You can check all the stack and tech <a href="https://stackshare.io/99wikis/99wikis" target="_blank">here</a></p>
+      </div>
+    </div>
 
     <!-- Disparei -->
-    
+    <div class="app-display disparei">
+      <div class="holder">
+        <div clas="logo"></div>
+        <h2>Disparei</h2>
+        <a href="https://disparei.co" target="_blank">disparei.co</a>
+        <p>Disparei is a central hub for digital marketing. You can schedule and automate marketing campaigns through many different channels (like email, sms, facebook, instagram...) in the same app.</p>
+        <h4>Build With</h4>
+        <p>You can check all the stack and tech <a href="https://stackshare.io/disparei/disparei" target="_blank">here</a></p>
+      </div>
+    </div>
+
+    <!-- Github -->
+    <div class="app-display github">
+      <h2>More work at my github</h2>
+      <a href="https://github.com/Agezao" target="_blank">https://github.com/Agezao</a>
+    </div>
 
     <div class="content" data-aos="fade-right" data-aos-delay="300" data-aos-duration="700"><div class="spacer"></div></div>
     <!-- More Info -->
